# poc-first-rust-api

./: .gitignore  Cargo.toml
src/: error.rs  handler.rs  main.rs
