[package]
name = "rustmongo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# mongodb = "0.9.2"
# actix-web = "2"
# actix-rt = "1"
# bson = "0.14.0"
# serde = "1.0.103"
# futures = "0.3.4"
# env_logger = "0.7"
# dotenv = "0.15.0"
# actix-cors = "0.2.0"
# serde_json = "1.0"
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
warp = "0.2"
serde = {version = "1.0", features = ["derive"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = { version = "0.3.4", default-features = false, features = ["async-await"] }
mongodb = "1.0.0"